--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,390 @@ body {
     rgba(0, 0, 0, 0)
   );
 }
+
+/* Theme */
+
+.section-padding {
+  padding: 120px 0;
+}
+
+/* 3.3 story-section */
+@media (max-width: 991px) {
+  .story-section {
+    padding-bottom: 0;
+  }
+}
+
+.story-section .story-timeline {
+  position: relative;
+  padding: 100px 0 0;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline {
+    padding-top: 20px;
+  }
+}
+
+.story-section .story-timeline .row {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.story-section .story-timeline:after {
+  content: "";
+  background: #cee0ef;
+  width: 2px;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline:after {
+    display: none;
+  }
+}
+
+.story-section .story-timeline .round-shape,
+.story-section .story-timeline .round-shape-2 {
+  background: #fff;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  border: 1px solid #5d7c78;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.story-section .story-timeline .round-shape:before,
+.story-section .story-timeline .round-shape-2:before {
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  width: 14px;
+  height: 14px;
+  content: "";
+  background: #5d7c78;
+  border-radius: 50%;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .round-shape,
+  .story-section .story-timeline .round-shape-2 {
+    display: none;
+  }
+  .story-section .story-timeline .round-shape:before,
+  .story-section .story-timeline .round-shape-2:before {
+    display: none;
+  }
+}
+
+.story-section .story-timeline .round-shape-2 {
+  left: 0;
+}
+
+.story-section .story-timeline .img-holder {
+  max-width: 330px;
+  border-radius: 175px 175px 0px 175px;
+  position: relative;
+  z-index: 1;
+  background: #fff;
+  margin-left: auto;
+  margin-right: 50px;
+  z-index: 1;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .img-holder {
+    margin: 0 auto;
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 450px) {
+  .story-section .story-timeline .img-holder {
+    max-width: 250px;
+  }
+}
+
+.story-section .story-timeline .img-holder:before {
+  position: absolute;
+  left: 3%;
+  top: 3%;
+  width: 94%;
+  height: 94%;
+  content: "";
+  border: 1px solid #fff;
+  border-radius: 175px 175px 0px 175px;
+}
+
+.story-section .story-timeline .img-holder img {
+  border-radius: 175px 175px 0px 175px;
+}
+
+.story-section .story-timeline .img-holder .story-shape-img-1 {
+  position: absolute;
+  top: -80px;
+  left: -80px;
+  z-index: -1;
+}
+
+.story-section .story-timeline .img-holder .story-shape-img-1 img {
+  border-radius: 0;
+}
+
+.story-section .story-timeline .img-holder .story-shape-img-2 {
+  position: absolute;
+  bottom: -75px;
+  left: -85px;
+  z-index: -1;
+}
+
+.story-section .story-timeline .img-holder .story-shape-img-2 img {
+  border-radius: 0;
+}
+
+.story-section .story-timeline .img-holder.right-align-img {
+  margin-left: 50px;
+  border-radius: 175px 0px 175px 175px;
+  margin-right: 0;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .img-holder.right-align-img {
+    margin: 0 auto;
+    margin-bottom: 100px;
+  }
+}
+
+.story-section .story-timeline .img-holder.right-align-img img {
+  border-radius: 175px 175px 175px 0px;
+}
+
+.story-section .story-timeline .img-holder.right-align-img:before {
+  border-radius: 175px 175px 175px 0px;
+}
+
+.story-section .story-timeline .img-holder.right-align-img .story-shape-img-1 {
+  left: auto;
+  right: -80px;
+}
+
+.story-section .story-timeline .img-holder.right-align-img .story-shape-img-2 {
+  left: auto;
+  right: -80px;
+}
+
+.story-section .story-timeline > .row {
+  position: relative;
+}
+
+.story-section .story-timeline > .row .horizontal-line {
+  background: rgba(200, 168, 152, 0.1);
+  width: 70%;
+  height: 1px;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.story-section .story-timeline > .row:last-child .col {
+  padding-top: 0 !important;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline > .row:last-child {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+}
+
+.story-section .story-timeline > .row + .row {
+  margin-top: 50px;
+  padding-top: 15px;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline > .row + .row {
+    padding-top: 30;
+  }
+}
+
+.story-section .story-timeline > .row > .col:first-child {
+  padding: 0 45px 0 60px;
+}
+
+@media (max-width: 1199px) {
+  .story-section .story-timeline > .row > .col:first-child {
+    padding: 0 45px 0 70px;
+  }
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline > .row > .col:first-child {
+    padding: 0 15px;
+  }
+}
+
+.story-section .story-timeline > .row > .col:last-child {
+  padding: 0 60px 0 45px;
+}
+
+@media (max-width: 1199px) {
+  .story-section .story-timeline > .row > .col:last-child {
+    padding: 0 70px 0 45px;
+  }
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline > .row > .col:last-child {
+    padding: 0 15px;
+  }
+}
+
+.story-section .story-timeline .story-text {
+  padding-left: 50px;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .story-text {
+    background: rgba(200, 168, 152, 0.05);
+    padding: 35px 25px;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+}
+
+.story-section .story-timeline .left-site .story-text {
+  padding-left: 0px;
+  padding-right: 50px;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .left-site .story-text {
+    background: rgba(200, 168, 152, 0.05);
+    padding: 35px 25px;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .story-section .story-timeline .right-align-text {
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .story-section .story-timeline .story-text.right-align-text {
+    padding-left: 0;
+    margin-right: 50px;
+  }
+}
+
+.story-section .story-timeline .text-holder {
+  position: relative;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .text-holder {
+    border: 0;
+    padding-top: 0 !important;
+  }
+}
+
+.story-section .story-timeline .text-holder .heart {
+  background-color: #dfe3e3;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  position: absolute;
+  left: -25px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  border-radius: 50%;
+  z-index: 10;
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline .text-holder .heart {
+    display: none;
+  }
+}
+
+.story-section .story-timeline .text-holder .fi {
+  color: #5d7c78;
+  font-size: 25px;
+}
+
+.story-section .story-timeline .right-heart .heart {
+  left: auto;
+  right: -22px;
+}
+
+.story-section .story-timeline h3 {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 49px;
+  font-size: 2.22222rem;
+  color: #212121;
+  margin: 0 0 0.5em;
+}
+
+@media (max-width: 1399px) {
+  .story-section .story-timeline h3 {
+    font-size: 35px;
+    font-size: 1.94444rem;
+  }
+}
+
+@media (max-width: 1199px) {
+  .story-section .story-timeline h3 {
+    font-size: 30px;
+    font-size: 1.66667rem;
+  }
+}
+
+@media (max-width: 991px) {
+  .story-section .story-timeline h3 {
+    font-size: 20px;
+    font-size: 1.11111rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .story-section .story-timeline h3 {
+    font-size: 18px;
+    font-size: 1rem;
+  }
+}
+
+.story-section .story-timeline .date {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 23px;
+  font-size: 1rem;
+  display: block;
+  margin-bottom: 15px;
+  color: #c8a898;
+}
+
+.story-section .story-timeline p {
+  margin-bottom: 0;
+}
+
+.story-section .story-timeline img {
+  display: inline-block;
+}
